# SlimLog

./: CMakeLists.txt  Makefile  README.md  required_packages  slimlog.pc.in
include/slim/: log.h.in
include/slim/common/: log.h.in
src/: main.cpp
